@startuml
hide circle
skinparam linetype ortho

entity "User" as user {
  * id : uuid <<PK>>
  --
  * email : string
  * name : string
  * password_hash : string
  * created_at : datetime
}

entity "Transaction" as transaction {
  * id : uuid <<PK>>
  --
  * user_id : uuid <<FK>>
  * name : string
  * amount : decimal
  * type : string
  * category_id : uuid <<FK>>
  * wallet_id : uuid <<FK>>
  * date : datetime
  * source : string
}

entity "Category" as category {
  * id : uuid <<PK>>
  --
  * user_id : uuid <<FK>>
  * name : string
  * type : string
  * is_system : boolean
}

entity "Wallet" as wallet {
  * id : uuid <<PK>>
  --
  * user_id : uuid <<FK>>
  * name : string
  * type : string
  * balance : decimal
}

entity "Budget" as budget {
  * id : uuid <<PK>>
  --
  * user_id : uuid <<FK>>
  * category_id : uuid <<FK>>
  * amount : decimal
  * period : string
}

entity "Debt" as debt {
  * id : uuid <<PK>>
  --
  * user_id : uuid <<FK>>
  * person_name : string
  * amount : decimal
  * type : string
  * status : string
}

entity "SharedWallet" as shared_wallet {
  * id : uuid <<PK>>
  --
  * name : string
  * created_by : uuid <<FK>>
}

user ||..o{ transaction
user ||..o{ category
user ||..|{ wallet
user ||..o{ budget
user ||..o{ debt
user ||..o{ shared_wallet

category ||..o{ transaction
wallet ||..o{ transaction
category ||..o{ budget

@enduml
